[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-enhancer"
version = "0.1.0"
description = "A TUI tool that enhances simple prompts into detailed, high-quality prompts"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.85.0",
    "anthropic>=0.39.0",
    "pyperclip>=1.9.0",
]

[project.scripts]
prompt-enhancer = "prompt_enhancer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_enhancer"]
